--- a/products-service/src/main/resources/application.properties
+++ b/products-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=products-service
 server.port=8081
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/ms_products
-spring.datasource.username=uncledave
-spring.datasource.password=Test123
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASS}
